[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/player/weapons/assets/laserray.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/weapons/laser.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/weapons/assets/ball.png" type="Texture" id=3]
[ext_resource path="res://scenes/player/cards/audio/laser.ogg" type="AudioStream" id=4]

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 19500, 100, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1086, 10.483 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1115.59, 6 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("laser/laser/laser:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser/laser/laser3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("laser/laser/laser2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "laserfadein"
length = 0.02
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("laser/laser/laser:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "laserfadein2"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("laser/laser/laser3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser/laser/laser2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "laserfadeout"
length = 0.07
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("laser/laser/laser:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "laserfadeout2"
length = 0.07
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("laser/laser/laser2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser/laser/laser3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="laser" type="Node2D"]

[node name="laser" type="KinematicBody2D" parent="."]
modulate = Color( 0.87451, 0.823529, 0.976471, 1 )
z_index = -1
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="laser"]
position = Vector2( 956, 0 )
scale = Vector2( 0.05, 0.05 )
emitting = false
amount = 25
one_shot = true
speed_scale = 3.0
explosiveness = 0.76
process_material = SubResource( 8 )
texture = ExtResource( 3 )

[node name="Particles2D2" type="Particles2D" parent="laser"]
position = Vector2( 956, 170.202 )
rotation = 0.174533
scale = Vector2( 0.05, 0.05 )
emitting = false
amount = 25
one_shot = true
speed_scale = 3.0
explosiveness = 0.76
process_material = SubResource( 8 )
texture = ExtResource( 3 )

[node name="Particles2D3" type="Particles2D" parent="laser"]
position = Vector2( 956, -170.202 )
rotation = -0.174533
scale = Vector2( 0.05, 0.05 )
emitting = false
amount = 25
one_shot = true
speed_scale = 3.0
explosiveness = 0.76
process_material = SubResource( 8 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="laser"]
shape = SubResource( 2 )

[node name="laser" type="Area2D" parent="laser"]
z_index = 1
collision_layer = 8
collision_mask = 8

[node name="laser" type="CollisionShape2D" parent="laser/laser"]
position = Vector2( 1166, 0 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="laser/laser/laser"]
visible = false
position = Vector2( 2.00002, 0 )
scale = Vector2( 2.61224, 0.695122 )
texture = ExtResource( 1 )

[node name="laser2" type="CollisionShape2D" parent="laser/laser"]
position = Vector2( 1160, 208 )
rotation = -2.96706
shape = SubResource( 9 )
disabled = true

[node name="Sprite" type="Sprite" parent="laser/laser/laser2"]
visible = false
position = Vector2( -3.10662, -0.561514 )
rotation = 3.14159
scale = Vector2( 2.6835, 0.4 )
texture = ExtResource( 1 )

[node name="laser3" type="CollisionShape2D" parent="laser/laser"]
position = Vector2( 1160, -208 )
rotation = -0.174533
scale = Vector2( 1, 1 )
shape = SubResource( 9 )
disabled = true

[node name="Sprite" type="Sprite" parent="laser/laser/laser3"]
visible = false
position = Vector2( 1.75439, -0.722961 )
scale = Vector2( 2.68178, 0.4 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/laserfadein = SubResource( 5 )
anims/laserfadein2 = SubResource( 6 )
anims/laserfadeout = SubResource( 4 )
anims/laserfadeout2 = SubResource( 7 )

[node name="lasersound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true
bus = "SFX"
